corrected the errors and attached a new file README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
+version: '3.8'
 services:
   postgres:
-    image: postgres:latest
-    container_name: postgres-db
+    image: postgres:alpine
     environment:
-      POSTGRES_DB: app
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: db_api
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U app -d app"]
+      test: [ "CMD-SHELL", "pg_isready -U admin -d db_api" ]
       interval: 10s
       timeout: 5s
       retries: 5
