--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/app
-spring.datasource.username=app
-spring.datasource.password=pass
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_api
+spring.datasource.username=admin
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 server.port=9999
+
 
