Add project files and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,21 @@
 Thumbs.db*
 .DS_Store
-HELP.md
-.gradle
-build/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
+Thumbs.db
+Desktop.ini
+.idea/
 .vscode/
-
-### Package Files ###
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-### Exclusions ###
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-data/
-*.log
+*.iml
+*.iws
+*.ipr
 target/
+build/
+*.class
+*.jar
+*.log
+logs/
+*.tmp
+*.temp
+*.bak
+*.backup
+.gradle/
+.mvn/
